<resources>
    <string name="app_name">Project 0: Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="app_list_title">My Nanodegree Apps!</string>
    <string name="app_title_spotify_streamer">Spotify Streamer</string>
    <string name="app_title_super_duo_football_scores">Super Duo:\nFootball Scores</string>
    <string name="app_title_super_duo_library_app">Super Duo:\nLibrary App</string>
    <string name="app_title_build_it_bigger">Build It Bigger</string>
    <string name="app_title_xyz_reader">XYZ Reader</string>
    <string name="app_title_capstone">Capstone</string>
</resources>
