<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context=".AppsListActivity">

    <TextView
        style="@style/AppListTitle"
        android:text="@string/app_list_title"
        />

    <Button
        android:id="@+id/btn_spotify"
        style="@style/AppListButtonStyle"
        android:text="@string/app_title_spotify_streamer"
        />

    <Button
        android:id="@+id/btn_super_duo_football_scores"
        style="@style/AppListButtonStyle"
        android:text="@string/app_title_super_duo_football_scores"
        />

    <Button
        android:id="@+id/btn_super_duo_library_app"
        style="@style/AppListButtonStyle"
        android:text="@string/app_title_super_duo_library_app"
        />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/AppListButtonStyle"
        android:text="@string/app_title_build_it_bigger"
        />

    <Button
        android:id="@+id/btn_xyz_reader"
        style="@style/AppListButtonStyle"
        android:text="@string/app_title_xyz_reader"
        />

    <Button
        android:id="@+id/btn_capstone"
        style="@style/AppListHighlightButtonStyle"
        android:text="@string/app_title_capstone"
        />

</LinearLayout>
